# ark-serde-compat

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yaml
src/: lib.rs
