[package]
name = "ark-serde-compat"
description = "Compat shim to serialize/deserialize values from the ark ecosystem with serde"
version = "0.1.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.85"
keywords = ["ark", "serde", "serialization", "deserialization"]
categories = ["encoding"]
repository = "https://github.com/ait-crypto/ark-serde-compat"

[dependencies]
ark-serialize = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false, features = [
  "std",
  "derive",
] }

[dev-dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
ark-bls12-381 = "0.5"
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
